# auto-commit-msg

./: .autocommitmsg.yaml  .gitignore  .goreleaser.yaml  LICENSE  README.md  default.nix  demo.cast  devenv.nix  devenv.yaml  flake.nix  go.mod  gomod2nix.toml  main.go  secretspec.toml
.github/workflows/: build.yml  main.yml  release.yml
assets/: custom-commit.cast  generated-commit.cast
cmd/: root.go
internal/git/: root.go  root_test.go
internal/openai/: openai.go  root.go
rust/: .gitignore  Cargo.toml  default.nix  devenv.nix  devenv.yaml  secretspec.toml
rust/src/: main.rs
templates/default/: .gitignore  devenv.nix  devenv.yaml
