[package]
name = "auto-commit-msg"
version = "0.4.0-dev"
edition = "2024"

[[bin]]
name = "acm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
regex = "1.12"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
toml = "0.9"
